Changed the Analysis classes so they are more efficient